<resources>
    <string name="app_name" translatable="false">CentralCurrencies</string>
    <string name="update_time">Last update: %1$s</string>
    <string name="unknown">unknown</string>
    <string name="appbar_title">Exchange rates of the Central Bank of Russia against the ruble</string>
    <string name="currency">Currency</string>
    <string name="rate">Rate</string>
    <string name="retry">Retry</string>
    <string name="connection_failed">Connection failed</string>
    <string name="the_list_may_be_outdated">The data may be outdated</string>
    <string name="error_verbose_message">(%1s)</string>
</resources>